css 전역스타일 설정

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <link rel="stylesheet" href="./css/main.css" >
 </head>
 <body>
-    Hello World!
+<div class="body__container">
+    
+</div>
 </body>
 </html>
