--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <!-- https://www.jsdelivr.com/package/npm/reset-css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css">
     <link rel="stylesheet" href="./css/main.css" >
+
+    <script defer src="./main.js"></script>
 </head>
 <body>
 <div class="body__container">
@@ -50,7 +52,7 @@
                 <div class="logo">
                     <a href="#">GitHub</a>
                 </div>
-                <ul class="main-menu">
+                <ul class="main-menu toggle">
                     <li><a href="#">Personal</a></li>
                     <li><a href="#">Open source</a></li>
                     <li><a href="#">Business</a></li>
@@ -58,7 +60,7 @@
                 </ul>
             </div>
 
-            <div class="sign-group float--right">
+            <div class="sign-group float--right toggle">
                 <div class="btn-group">
                     <a href="#" class="btn sign-in">Sign in</a>
                     <a href="#" class="btn btn--primary sign-up">Sign up</a>
@@ -73,6 +75,8 @@
                     <li><a href="#">Support</a></li>
                 </ul>
             </div>
+
+            <div id="toggle-btn">Header Menu Toggle Button</div>
         </div>
     </header>
 
