--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <!-- https://www.jsdelivr.com/package/npm/reset-css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css">
     <link rel="stylesheet" href="./css/main.css" >
+    <link rel="stylesheet" media="(max-width: 1024px)" href="./css/main_medium.css" >
+    <link rel="stylesheet" media="(max-width: 768px)" href="./css/main_small.css" >
 
     <script defer src="./main.js"></script>
 </head>
